css/styles.css
/* ... */
img.imgabout {
    width: 100%;
    height: auto;
}

/*quotes*/
div.quote {
    background-color: #686159;
    max-width: 70%;
    min-height: 100px;
    color: #FFFFFF;
    font-size: 1.2em;
    border-radius: 10px;
    line-height: 1.6em;
    display: flex;
    justify-content: center;
    margin: 0 auto;
}

blockquote {
    margin: 6% 2% 2% 2%;
}

/*centering buttons my-pages firefox*/
div.container-boka-resa {
    margin: 0 auto;
}

div.container-boka-aterkommande {
    margin: 0 auto;
}

div.container-mina-resor {
    margin: 0 auto;
}

div.container-my-profile {
    margin: 0 auto;
}

div.container-logout {
    margin: 0 auto;
}

/*tablet setting*/
@media screen and (min-width: 800px) and (max-width: 1199px) {
    .vertical-center {
        margin: 0 auto;
        padding: 0px !important;
        max-width: 100%;
    }

    .search-wrapper {
        display: none;
    }

    .search-wrapper-header {
        display: block;
        justify-self: flex-end;
    }

    .hidden-label {
        visibility: hidden;
        width: 0px;
        height: 0px;
    }

    header {
        min-height: 84px;
        max-width: 100%;
    }

    .main-header {
        display: flex;
        justify-content: space-between;
        align-content: center;
        width: 100%;
    }

    /*Search header*/
    .search-wrapper-header {
        position: relative;
        display: flex;
        align-items: center;
        padding: 10px 20px;
        border: 1px solid;
        margin-right: 0px;
        width: 30%;
        background-color: #FFFFFF;
    }

    .search-wrapper-header input {
        width: 100%;
        border: none;
        outline: none;
        background-color: transparent;
        font-size: 1.2em;
    }

    .icon-search-header {
        font-size: 1.4em;
        color: #3F3F3F;
        margin-left: 10px;
    }

    /*mainnav settings*/
    #icon-menu {
        display: none;
    }

    .wrapper-navigation-fullwitdh {
        width: 100%;
        background-color: #FFFFFF;
        min-height: 80px;
    }

    .wrapper-navigation {
        display: grid;
        grid-template-columns: auto auto;
        padding: 0px;
        min-height: 80px;
        max-width: 100%;
    }

    .top-nav {
        width: 110px;
        height: 51px;
        display: block;
        grid-area: 1 / 6 / 2 / 7;
        align-self: center;
        justify-self: end;
    }

    .user a {
        font-size: 0.8em;
    }

    .main-nav {
        display: block;
        position: relative;
        grid-area: 1 / 1 / 2 / 6;
        min-height: 80px;
        align-content: center;
    }

    .main-nav ul {
        list-style: none;
        text-align: left;
        display: flex;
        flex-direction: row;
        padding-left: 0;
        margin-top: 0;
        justify-content: flex-start;
        align-items: center;
        margin-bottom: 0;
    }

    .main-nav li {
        border-bottom: none;
        padding-right: 10px;
    }

    .main-nav li a {
        width: 80%;
        height: 52px;
        color: #000000;
        text-align: left;
        padding: 14px 16px;
        text-decoration: none;
        float: left;
    }

    .logon-main-nav {
        background-color: #FFFFFF;
    }

    .logon-main-nav li {
        border-bottom: 1px solid #000000;
    }

    .logon-main-nav li a {
        color: #000000;
    }

    section {
        width: 90%;
        margin: 0 auto;
        border-radius: 10px;
        margin-bottom: 50px;
    }

    /*Font sizes*/
    h1 {
        font-family: "my-font-p", sans-serif;
        font-size: 3em;
        text-align: left;
        padding-left: 1%;
        padding-top: 1%;
    }

    h2 {
        font-size: 2em;
        font-family: "my-font-h2-h3", sans-serif;
        text-align: center;
    }

    section h2 {
        margin-bottom: 0px;
    }

    h3 {
        font-size: 1.7em;
        font-family: "my-font-h2-h3", sans-serif;
    }

    p {
        margin: 0 auto;
        font-size: 1.2em;
    }

    footer {
        font-size: 1.4em;
    }

    .h2-font {
        padding: 0;
        margin: 0;
        text-align: left;
    }

    /*Setting main headings*/
    .heading {
        margin-top: 10ch;
        max-width: 65ch;
        padding-left: 2%;
    }

    /*Settings section fardtjanst page*/
    section.fardtjanst-page-links {
        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
        grid-template-rows: auto auto;
    }

    section.fardtjanst-page-links .heading {
        grid-area: 1 / 2 / 2 / 5;
    }

    ul.page-links {
        list-style: none;
        font-size: 1.8em;
        line-height: 2em;
        padding-left: 2%;
        grid-area: 2 / 2 / 3 / 5;
    }

    /*images*/
    div.container-images {
        display: flex;
        padding: 2% 15% 4% 15%;
        justify-content: space-between;
    }

    img {
        border-radius: 10px;
    }

    picture.imgtwo {
        display: block;
    }

    /*quotes*/
    div.quote {
        background-color: #686159;
        max-width: 40%;
        min-height: 100px;
        color: #FFFFFF;
        font-size: 1.2em;
        border-radius: 10px;
        line-height: 1.6em;
        display: flex;
        justify-content: center;
        margin: 0 auto;
    }

    blockquote {
        margin: 6% 2% 2% 2%;
    }

    ol.orderedlist-page {
        font-size: 1.2em;
    }

    ul.unorderedlist-page {
        font-size: 1.2em;
    }
}
/* ... */

